[COZY-291] fix: Dto Converter로 생성